# regia

./: .gitignore  Cargo.toml
src/: aqua.rs  conf.rs  db.rs  main.rs  note.rs  notetaker.rs  taskmaster.rs  todo.rs
