[package]
authors = ["Teague Lasser <contact@teague.info>"]
edition = "2018"
name = "regia"
version = "0.1.0"

[dev-dependencies]
tempfile = "3.1.0"

[dependencies]
clap = "2.33.0"
dirs = "2.0.2"
rmp-serde = "0.13.7"
serde_yaml = "0.8.9"
yaml-rust = "0.4.3"

[dependencies.chrono]
features = ["serde"]
version = "0.4.8"

[dependencies.serde]
features = ["derive"]
version = "1.0.99"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.7.4"
